# src/dotnet-core/Wexflow.Server/swagger-ui/swagger.yaml
@@ -408,7 +408,28 @@ paths:
         200:
           description: "successful operation"
      consumes:
-      - "application/json"    
+      - "application/json"
+      
+  /json/{id}:
+    get:
+     tags:
+     - "Designer"
+     summary: "Returns a workflow as JSON"
+     description: ""
+     produces:
+       - "application/json"
+     parameters:
+        - name: "id"
+          in: "path"
+          description: "Workflow id"
+          required: true
+          type: "integer"
+          format: "int64"
+     responses:
+        200:
+          description: "successful operation"
+     consumes:
+      - "application/json" 
   
   /taskNames:
     get:
